...
		}
	}
	
	var iconName: String {
		switch self {
			case .home:
				return "house"
			case .commande:
				return "shippingbox"
			case .params:
				return "gear"
			case .cgu:
				return "doc.text"
			case .mention:
				return "scroll"
...
