...
	@State var selectedSideMenuTab = 0
    @State private var selectedCategory: Category?
    @State private var categoryViewShow = false
	@State private var showHeader = true

    let categories: [Category] = [
        Category(id: "1", name: "Salon", description: "Categorie Salon", image: "Salon"),
        Category(id: "2", name: "Kitchen", description: "Categorie Cuisine", image: "Kitchen"),
        Category(id: "3", name: "Bedroom", description: "Categorie Chambre", image: "Bedroom"),
        Category(id: "4", name: "Bathroom", description: "Categorie Salle de bain", image: "Bathroom"),
        Category(id: "5", name: "Dining room", description: "Categorie Salle a manger", image: "Diningroom"),
    ]

...
						// MARK: Header
						
						Header(presentSideMenu: $presentSideMenu, showResearch: $showResearch, presentCart: $showCart)
                        // MARK: Carousel

                        Carousel()
                        Text("Venant des hautes terres d'écosse nos meubles sont immortels")
                            .font(Font.custom("Comfortaa-Regular", size: 20))
                            .multilineTextAlignment(.center)
                            .padding()
                            .tint(.secondaryWhite)
                        Spacer()

...
