...
        self.loginViewModel = loginViewModel
    }

    func fetchOrders() async {
 		// This should be your actual network fetching logic
		let fetchedOrders = [
			Order(id: 1, date: "22/03/2024", priceTotal: 35, orderNumber: "XXXXXXXXXXXX", status: "Livrée", itemCount: 3, year: 2024),
			Order(id: 2, date: "15/02/2024", priceTotal: 50, orderNumber: "YYYYYYYYYYYY", status: "En cours", itemCount: 2, year: 2024),
			Order(id: 3, date: "12/12/2023", priceTotal: 25, orderNumber: "ZZZZZZZZZZZZ", status: "Annulée", itemCount: 1, year: 2023),
			Order(id: 4, date: "11/11/2022", priceTotal: 100, orderNumber: "AAAAAAAAAAAA", status: "Livrée", itemCount: 4, year: 2022),
			// Add more orders as needed
		]
		
...
